styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header {
    background-color: rgb(0,0,0);
}


header h1 {
    padding: 1rem 0;
    text-align: center;
    font-size:x-large;
    color: rgb(185, 185, 185);
}

header nav {
    background-color: rgb(110, 30, 30);
}


.nav {
    padding: .5rem 0;
    display: flex; 
    justify-content: space-around;
    list-style-type: none;
}

.nav a {
    text-decoration: none;
    font-size: larger;
    font-weight: 600;
    color: rgb(38, 183, 193);
}

nav a:hover {
    color: rgb(166, 166, 166);
}


main {
    max-width: 95%;
    margin: 0 auto;
 }

.sections {
        display: grid;
        grid-template-columns: 2fr 1fr;
        grid-gap: .5rem;
    }



.card {
    border: 1.5px solid black;      /*#415541*/
    background-color: beige;
    border-radius: 10px;
    margin: 2rem 0;
    overflow: hidden;
}

.card > h2 {
    background-color: rgb(110, 30, 30);
    border-bottom: 1.5px solid black;
    color: rgb(38, 183, 193);
    display: block;
    text-align: center;
    padding: .5rem 0;
}

.card > p {
    text-align: center;
    padding: 1rem;
}

.dev-src-link {
    display: inline-block;
    text-decoration: none;
    padding: .5rem 1rem;
    color:#7d2f2f;
    font-size: larger;
    font-weight: bold;
    transition: 500ms;
}

.dev-src-link:hover {
    color:rgb(225, 191, 0);
    transition: 1000ms;
}

.card h3 {
    text-align: center;
}

.article-container {
    display: flex;
    padding: 1rem;
    font-size: large;

}

.argentina-flag {
    margin-right: 1rem;
}

footer {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    background-color: rgb(0,0,0);
    text-align: center;
    justify-content: center;
    align-items: center;
}

footer p {
    margin: .5rem;
    font-size: 1.2rem;
    color: rgb(185, 185, 185);
}


.container-AR-flag {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 2fr 1fr;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: 3px solid silver;
    box-shadow: 2px 3px 7px black;
    overflow: hidden;
}

.first-lightblue-color-flag {
    grid-row: 1/2;
    grid-column: 1/4;
    width: 100%;
    background: rgb(108, 172, 228);
}

.white-middle-color-flag {
    grid-row: 2/3;
    grid-column: 1/4;
    width: 100%;
    background-color: #fff;
}


.sun-center-color-flag {
    margin-top: 1px;
    height: 10px;
    grid-column: 2/3;
    grid-row: 2/3;
    background: rgb(255,184,28);
    border-radius: 50px;
    width: 10px;
    z-index: 2;
}


.last-lightblue-color-flag {
        grid-row: 3/4;
        grid-column: 1/4;
        width: 100%;
        background: rgb(108, 172, 228);
    }

